Moved profile image on to background image in header by making it absolute. Adjusted margins to percentages and footer grid to auto as this allows for responsiveness of text in footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </div>
 
     <section class="header-profile-img">
+      <div class="profile-img-head">
       <img class="profile-img" src="./assets/images/avatar-profile-img.png" />
+    </div>
     </section>
   </section>
 
