Changed link to recent project to bootcamp project 1 Destination guide. Changed avatar image to my own. Add a top margin to About me section.

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         </section>
 
         <section class="section-recent">
-          <a href="https://www.open.ac.uk/">
+          <a href="https://smiller-2019.github.io/destination-guide/">
             <!-- <div class="section-recent-img" role="img" aria-label="background image of amazon river"></div> -->
 
-<img class="section-recent-img" src="./assets/images/waterfall.jpg" alt="image of a waterfall"/>
+            <img class="section-recent-img" src="./assets/images/waterfall.jpg" alt="image of a waterfall"/>
             <div class="section-recent-main-text">
-              Payroll <span>Backend</span>
+              Destination Guide <span>Frontend</span><span>Javascript</span><span>HTML/CSS/api</span>
             </div>
           </a>
 
