Added link to second project Online digital exercise book

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         <!-- This is the work section title and background image along with the hyper ling and title of the work for the first previous work section -->
 
         <section class="section-previous-first">
-          <a href="https://www.birmingham.ac.uk/">
+          <a href="https://online-digital-exercise-books.herokuapp.com/">
             <!-- <div class="section-previous-first-img" role="img" aria-label="background image of bubble"></div> -->
             <img class="section-recent-img" src="./assets/images/sea.jpg" alt="image of the sea"/>
             <div class="section-previous-first-text">
-              Stock control <span>Full stack</span>
+              Online Digital Exercise Book <span>Full stack</span>
             </div>
           </a>
         </section>
