Added project 3 to profile.

--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
         </section>
         <!-- This is the work section title and background image  with the hyper ling and title of the work for the second previous work section -->
         <section class="section-previous-second">
-          <a href="https://www.aston.ac.uk/">
+          <a href="https://young-earth-93319.herokuapp.com/">
             <!-- <div class="section-previous-second-img" role="img" aria-label="background image of feathers"></div> -->
             <img class="section-recent-img" src="./assets/images/river.jpg" alt="image of a river"/>
             <div class="section-previous-second-text">
-              Festival Booking System <span>Full stack</span>
+              Swap Shop <span>Full stack</span>
             </div>
           </a>
         </section>
